# factorio-tg-bridge

./: Cargo.toml  Dockerfile
.devcontainer/: devcontainer.json
src/: config.rs  factorio.rs  main.rs  tg.rs
